<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Application">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/header"
            android:textColor="@color/forest_Green"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/headerstyle_bac"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/Org"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#46E64C"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/Relativ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/TextDemoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="10dp"
            android:text="Application Status:"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/StatusID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/TextDemoId"
            android:textColor="@color/Green"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/liniyar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="left"
        android:orientation="vertical"
        android:visibility="visible">


        <EditText
            android:id="@+id/ApplyNameID"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/headerstyle_bac2"
            android:focusable="true"
            android:hint="@string/name"
            android:padding="10dp" />


        <EditText
            android:id="@+id/ApplyTakaID"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/headerstyle_bac2"
            android:focusable="true"
            android:hint="@string/takar_proriman"
            android:padding="10dp" />


        <EditText
            android:id="@+id/ApplySomoyID"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/headerstyle_bac2"
            android:focusable="true"
            android:hint="@string/Somoy"
            android:padding="10dp" />

        <EditText
            android:id="@+id/ApplyMessageID"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/headerstyle_bac2"
            android:focusable="true"
            android:hint="@string/somossa"
            android:padding="10dp" />

        <Button
            android:id="@+id/Send"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/headerstyle_bac"
            android:gravity="center"
            android:text="Send"
            android:textAllCaps="false"
            android:textColor="#4CAF50"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progrsssssssId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>